name:          zippers
category:      zippers
version:       0.2.4
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/zippers/
bug-reports:   http://github.com/ekmett/zippers/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
synopsis:      Traversal based zippers
description:   Traversal based zippers
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  Warning.hs
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: https://github.com/ekmett/zippers

custom-setup
  setup-depends:
    base          >= 4 && < 5,
    Cabal,
    cabal-doctest >= 1 && < 1.1

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.5 && < 5,
    lens >= 4 && < 5,
    profunctors >= 4 && < 6,
    semigroupoids >= 4 && < 6
  exposed-modules:
    Control.Zipper
    Control.Zipper.Internal

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    doctest >= 0.11.1 && < 0.13,
    zippers
  ghc-options: -Wall -threaded
  hs-source-dirs: tests

benchmark zipper
  type:             exitcode-stdio-1.0
  main-is:          zipper.hs
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -fdicts-cheap -funbox-strict-fields
  hs-source-dirs:   benchmarks
  build-depends:
    base,
    criterion,
    lens,
    zippers
