name:          zippers
category:      zippers
version:       0.3.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/zippers/
bug-reports:   http://github.com/ekmett/zippers/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
synopsis:      Traversal based zippers
description:   Traversal based zippers.
build-type:    Simple
tested-with:   GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.3
             , GHC == 8.10.1

extra-source-files:
  .ghci
  .gitignore
  .hlint.yaml
  .vim.custom
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: https://github.com/ekmett/zippers

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.5 && < 5,
    fail == 4.9.*,
    indexed-traversable >= 0.1.1 && < 0.2,
    lens >= 4 && < 6,
    profunctors >= 4 && < 6,
    semigroups >= 0.16 && < 1,
    semigroupoids >= 4 && < 6
  exposed-modules:
    Control.Zipper
    Control.Zipper.Internal

benchmark zipper
  type:             exitcode-stdio-1.0
  main-is:          zipper.hs
  default-language: Haskell2010
  ghc-options:      -O2 -threaded -fdicts-cheap -funbox-strict-fields
  hs-source-dirs:   benchmarks
  build-depends:
    base,
    criterion,
    lens,
    zippers
