name:          zippers-examples
category:      Data, Lenses
version:       0.1
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Niklas Haas
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/lens/
bug-reports:   http://github.com/ekmett/lens/issues
copyright:     Copyright (C) 2012 Edward A. Kmett
synopsis:      Lenses, Folds, Traversals and Zippers
description:   Lenses, Folds, Traversals and Zippers
               .
               Brainfuck Example

build-type:    Simple
tested-with:   GHC == 7.4.2
             , GHC == 7.6.3
             , GHC == 7.8.4
             , GHC == 7.10.3
             , GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.1
extra-source-files: bf-examples/*.bf

source-repository head
  type: git
  location: git://github.com/ekmett/zippers.git

flag brainfuck
  default: True

executable zippers-brainfuck
  if !flag(brainfuck)
    buildable: False

  build-depends:
    base       >= 4.5   && < 5,
    lens,
    zippers,
    free       >= 3.0,
    bytestring,
    mtl        >= 2.0.1 && < 2.3,
    streams    >= 3.0
  main-is: Brainfuck.hs
  hs-source-dirs: .

executable zippers-brainfuck-final
  if !flag(brainfuck)
    buildable: False

  build-depends:
    base       >= 4.5   && < 5,
    lens,
    zippers,
    free       >= 3.0,
    bytestring,
    mtl        >= 2.0.1 && < 2.3,
    streams    >= 3.0
  main-is: BrainfuckFinal.hs
  hs-source-dirs: .
